<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="Login">Entrar</string>
    <string name="dontHaveAccount">¿No tienes cuenta?</string>
    <string name="createHere">Crea una aqui</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password_confirm">Confirmar contraseña</string>
    <string name="text_button_createaccount">Unete</string>
    <string name="toolbar_tittle_createaccount">Crear cuenta</string>
</resources>
